# goit-web-hw-10

./: .env.example  README.md  pyproject.toml
hw10_proj/: manage.py
hw10_proj/hw10_proj/: asgi.py  settings.py  urls.py  wsgi.py
hw10_proj/quotes_app/: forms.py  models.py  urls.py  utils.py  views.py
hw10_proj/quotes_app/migrations/: 0001_initial.py  0002_alter_tag_name.py
hw10_proj/quotes_app/scraping/: scrap.py
hw10_proj/quotes_app/scraping/seed/: authors.json
hw10_proj/quotes_app/static/quotes_app/: style.css
hw10_proj/quotes_app/templates/quotes_app/: author.html  author_add.html  base.html  index.html  quote_add.html  tag_add.html  tags.html
hw10_proj/quotes_app/templatetags/: extract.py
hw10_proj/user_app/: forms.py  urls.py  views.py
hw10_proj/user_app/templates/user_app/: login.html  logout.html  password_reset.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_email.html  register.html  userinfo.html
